--- a/src/HAI711I_Graphes_Structures/assets/tikz/exam_blanc_ex_5_1_b.tex
+++ b/src/HAI711I_Graphes_Structures/assets/tikz/exam_blanc_ex_5_1_b.tex
@@ -1,5 +1,5 @@
 \ffigbox[\FBwidth]{%
-\caption{\centering Graphe \(C_5\) de départ}\label{Fig:exam_blanc_ex_5_1_a}
+\caption{\centering Graphe \(C_5\) de départ}\label{Fig:exam_blanc_ex_5_1_b}
 }{
     \fbox{
         \begin{tikzpicture}[scale=1, main node/.style={circle, draw, fill=blue!20, inner sep=1pt, font=\scriptsize, minimum size=6mm}]
