--- a/src/HAI711I_Graphes_Structures/tds/td_main.tex
+++ b/src/HAI711I_Graphes_Structures/tds/td_main.tex
@@ -53,5 +53,13 @@
     \setcounter{tdcounter}{0}
     \input{../tds/td_4.tex}
 
+    
+    \newpage
+    \section*{TD5 --- Coloration}\label{sec:TD5}
+    \addcontentsline{toc}{section}{\nameref{sec:TD5}}
+    \setcounter{section}{6}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_5.tex}
+
 \end{document}
 
