fixed various warnings, mostly duplicate label fixing

--- a/src/HAI711I_Graphes_Structures/assets/tikz/exam_blanc_ex_5_2_b.tex
+++ b/src/HAI711I_Graphes_Structures/assets/tikz/exam_blanc_ex_5_2_b.tex
@@ -1,5 +1,5 @@
 \ffigbox[\FBwidth]{%
-\caption{\centering Complémentaire du graphe \(C_5\)}\label{Fig:exam_blanc_ex_5_1_a}
+\caption{\centering Complémentaire du graphe \(C_5\)}\label{Fig:exam_blanc_ex_5_2_b}
 }{
     \fbox{
         \begin{tikzpicture}[scale=1, main node/.style={circle, draw, fill=blue!20, inner sep=1pt, font=\scriptsize, minimum size=6mm}]
