--- a/src/HAI711I_Graphes_Structures/assets/tikz/td_1_ex_3_2_a.tex
+++ b/src/HAI711I_Graphes_Structures/assets/tikz/td_1_ex_3_2_a.tex
@@ -1,6 +1,6 @@
 % Figure 1
 \ffigbox[\FBwidth]{
-\caption{\centering Premiere etape du BFS}\label{Fig:td1ex3c3}
+\caption{\centering Premiere etape du BFS}\label{Fig:td_1_ex_3_2_a}
 }{
     \fbox{
         \begin{tikzpicture}[scale=1, every node/.style={circle, draw, fill=blue!20, inner sep=1pt, font=\footnotesize, minimum size=4mm}]
