--- a/src/HAI711I_Graphes_Structures/assets/tikz/td_2_ex_13_6.tex
+++ b/src/HAI711I_Graphes_Structures/assets/tikz/td_2_ex_13_6.tex
@@ -1,6 +1,6 @@
 % Figure 1
 \ffigbox[\FBwidth]{
-\caption{\centering Graphe \(G\)}\label{Fig:td1ex3c3}
+\caption{\centering Graphe \(G\)}\label{Fig:td_2_ex_13_6}
 }{
     \fbox{
         \begin{tikzpicture}[scale=1, every node/.style={circle, draw, fill=blue!20, inner sep=1pt, font=\footnotesize, minimum size=4mm}]
