--- a/src/HAI722I_Recherche_Operationnelle/assets/module_header.tex
+++ b/src/HAI722I_Recherche_Operationnelle/assets/module_header.tex
@@ -60,7 +60,7 @@
     sin, atan, true, add},
     sensitive=true,
     comment=[l]{\#},
-    morestring=[b]",
+    morestring=[b]", % chktex 18
 }
 \definecolor{codebg}{RGB}{245,245,245}   % very light gray
 \definecolor{codeborder}{RGB}{220,220,220} 
@@ -89,7 +89,7 @@
     keywords={sudo, apt-get, install, update, upgrade, cd, ls, mkdir, rm, rmdir, touch, nano, vim, cat, echo, pwd, cp, mv},
     sensitive=true,
     comment=[l]{\#},
-    morestring=[b]",
+    morestring=[b]", % chktex 18
 }
 \lstdefinestyle{bash-style}{
     language=bash,
