make necessary changes for first successful build in s8

--- a/src/HAI820I_Complements_RO/tds/td_main.tex
+++ b/src/HAI820I_Complements_RO/tds/td_main.tex
@@ -25,11 +25,11 @@
     \setcounter{tdcounter}{0}
     \input{../tds/td_1.tex}
 
-    \newpage
-    \section*{CC1}\label{sec:CC1}
-    \addcontentsline{toc}{section}{\nameref{sec:CC1}}
-    \setcounter{section}{2}
-    \setcounter{tdcounter}{0}
-    \input{../tds/cc_1.tex}
+    % \newpage
+    % \section*{CC1}\label{sec:CC1}
+    % \addcontentsline{toc}{section}{\nameref{sec:CC1}}
+    % \setcounter{section}{2}
+    % \setcounter{tdcounter}{0}
+    % \input{../tds/cc_1.tex}
 \end{document}
 
