smol maj td ro2

--- a/src/HAI820I_Complements_RO/tds/td_1.tex
+++ b/src/HAI820I_Complements_RO/tds/td_1.tex
@@ -1,6 +1,7 @@
 \section{Convexité: ensembles et fonctions}\label{subsec:ss_1}
 
-\input{../exos/exo_01.tex} %
+\subsection{Arbre de branchement et exemples}
+\input{../exos/exo_02.tex} %
 
 % \input{../exos/exo_02.tex} %
 
