maj ro2 exo layout and content for 1-4

--- a/src/HAI820I_Complements_RO/exos/exo_02.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_02.tex
@@ -1,5 +1,5 @@
 % ----- Consignes exo 2 ----- %
-\begin{td-exo}[Solutions entières versus solutions réelles]\, % 2 
+\begin{td-exo}[Solutions entières versus solutions réelles]\,\\ % 2 
 	Donner les solutions réelles et entières des problèmes suivants.
 	\begin{enumerate}
 		\item Un premier LP\@:
@@ -41,11 +41,6 @@
 % ----- Solutions exo 2 ----- %
 \iftoggle{showsolutions}{
 	\begin{td-sol}[]\ % 2
-		Les solutions sont
-		\begin{enumerate}
-			\item On commence avec les valeurs \((\frac34, \frac14)\) ce qui nous donne un \(z_{LP}^\ast = 2\).
-			En ILP cela donne \((1,0)\) pour \(z_{ILP}^\ast = 3\).
-			L'écart total est de 1 ce qui semble raisonnable
-		\end{enumerate}
+		
 	\end{td-sol}
 }{}
