--- a/src/HAI820I_Complements_RO/tds/td_main.tex
+++ b/src/HAI820I_Complements_RO/tds/td_main.tex
@@ -24,6 +24,13 @@
     % \setcounter{section}{1}
     \setcounter{tdcounter}{0}
     \input{../tds/td_1.tex}
+    \newpage
+    \input{../tds/td_2.tex}
+    \newpage
+    \input{../tds/td_3.tex}
+    \newpage
+    \input{../tds/td_4.tex}
+    
 
     % \newpage
 \end{document}
