updated labels in td ro for correct label and duplicate deletion

--- a/src/HAI820I_Complements_RO/tds/td_1.tex
+++ b/src/HAI820I_Complements_RO/tds/td_1.tex
@@ -1,14 +1,14 @@
 \section{Programmation linéaire en nombres entiers}\label{sec:s_1}
 
-\subsection{Matrice totalement unimodulaire}\label{subsec:ss_1}
+\subsection{Matrice totalement unimodulaire}\label{subsec:ss1_1}
 \input{../exos/exo_01.tex}
 
-\subsection{Arbre de branchement et exemples}\label{subsec:ss_2}
+\subsection{Arbre de branchement et exemples}\label{subsec:ss1_2}
 \input{../exos/exo_02.tex}
 
 \input{../exos/exo_03.tex}
 
-\subsection{Résolution effective}\label{subsec:ss_3}
+\subsection{Résolution effective}\label{subsec:ss1_3}
 
 \input{../exos/exo_04.tex}
 
@@ -18,7 +18,7 @@
 
 \input{../exos/exo_07.tex}
 
-\subsection{Inégalités valides}\label{subsec:ss_4}
+\subsection{Inégalités valides}\label{subsec:ss1_4}
 \input{../exos/exo_08.tex}
 
 \input{../exos/exo_09.tex}
@@ -31,14 +31,14 @@
 
 \input{../exos/exo_13.tex}
 
-\subsection{Coupes}\label{subsec:ss_5}
+\subsection{Coupes}\label{subsec:ss1_5}
 \input{../exos/exo_14.tex}
 
 \input{../exos/exo_15.tex}
 
 \input{../exos/exo_16.tex}
 
-\subsection{Enveloppe convexe}\label{subsec:ss_6}
+\subsection{Enveloppe convexe}\label{subsec:ss1_6}
 \input{../exos/exo_17.tex}
 
 \input{../exos/exo_18.tex}
