--- a/src/HAI820I_Complements_RO/tds/td_main.tex
+++ b/src/HAI820I_Complements_RO/tds/td_main.tex
@@ -6,7 +6,7 @@
 \input{../assets/module_header.tex}
 \usepackage[a4paper,hmargin=30mm,vmargin=30mm]{geometry}
 
-\title{\color{astral} \sffamily \bfseries HAI722I --- TDs}
+\title{\color{astral} \sffamily \bfseries HAI820I Recherche Opérationnelle II --- TDs}
 \author{Ivan Lejeune}
 \date{\today}
 
