update exercise 1 and add support for algorithms

--- a/src/HAI802I_Algorithmique_Avancee/exos/exo_01.tex
+++ b/src/HAI802I_Algorithmique_Avancee/exos/exo_01.tex
@@ -1,6 +1,14 @@
 % ----- Consignes exo 1 ----- %
-\begin{td-exo}[title]\,\\ % 1 
-	
+\begin{td-exo}[Quelques preuves de NP-complétude autour de 3-SAT]\, % 1 
+	\input{../assets/tikz/td1_ex1_1.tex}
+	\input{../assets/tikz/td1_ex1_2.tex}
+	\input{../assets/tikz/td1_ex1_3.tex}
+
+	\begin{enumerate}
+		\item Montrer que \(\lnot3\)-SAT appartient à la classe \(P\).
+		\item Montrer que \textsc{Half} \(3\)-SAT est NP-complet. 
+		Que dire du problème \textsc{Half} \(3\)-SAT dans le cas où le nombre de clauses satisfaites est au moins de \(50\%\)?
+	\end{enumerate}
 \end{td-exo}
 
 % ----- Solutions exo 1 ----- %
