--- a/src/HAI802I_Algorithmique_Avancee/tds/td_main.tex
+++ b/src/HAI802I_Algorithmique_Avancee/tds/td_main.tex
@@ -19,6 +19,9 @@
     \tableofcontents
 
     \newpage
+    \listofalgorithms % chktex 1
+
+    \newpage
     \setcounter{tdcounter}{0}
     \input{../tds/td_1.tex}
     \newpage
