update exercise 2 advanced algo

--- a/src/HAI802I_Algorithmique_Avancee/assets/module_header.tex
+++ b/src/HAI802I_Algorithmique_Avancee/assets/module_header.tex
@@ -81,7 +81,14 @@
 % ==============================================================================
 \usepackage[noend]{algpseudocode}
 \DeclareCaptionType{algorithm}[Algorithme][Liste des Algorithmes]
-\captionsetup[algorithm]{justification=raggedright,singlelinecheck=false}
+\captionsetup[algorithm]{ %
+    justification=raggedright,
+    singlelinecheck=false,
+    skip=4pt
+}
+% Reduce space around algorithm floats
+\floatsetup[algorithm]{precode=\vspace{-40pt}, postcode=\vspace{-6pt}}
+
 
 \newcommand*\Let[2]{\State #1 $\gets$ #2} % chktex 1
 \algrenewcommand\alglinenumber[1]{
