--- a/src/HAI802I_Algorithmique_Avancee/tds/td_main.tex
+++ b/src/HAI802I_Algorithmique_Avancee/tds/td_main.tex
@@ -10,9 +10,7 @@
 \author{Ivan Lejeune}
 \date{\today}
 
-\toggletrue{showsolutions} % Allows showing/hiding solutions
-% uncomment the following line to hide solutions
-% \togglefalse{showsolutions}
+\toggletrue{showsolutions}
 
 \begin{document}
     \maketitle
