commented out non working spacing commands around floats (and algorithm environments)

--- a/src/HAI802I_Algorithmique_Avancee/assets/module_header.tex
+++ b/src/HAI802I_Algorithmique_Avancee/assets/module_header.tex
@@ -84,10 +84,10 @@
 \captionsetup[algorithm]{ %
     justification=raggedright,
     singlelinecheck=false,
-    skip=4pt
+    % skip=10pt
 }
 % Reduce space around algorithm floats
-\floatsetup[algorithm]{precode=\vspace{-40pt}, postcode=\vspace{-6pt}}
+% \floatsetup[algorithm]{precode=\vspace{-40pt}, postcode=\vspace{-6pt}}
 
 
 \newcommand*\Let[2]{\State #1 $\gets$ #2} % chktex 1
