--- a/src/HAI802I_Algorithmique_Avancee/exos/exo_03.tex
+++ b/src/HAI802I_Algorithmique_Avancee/exos/exo_03.tex
@@ -1,6 +1,12 @@
 % ----- Consignes exo 3 ----- %
-\begin{td-exo}[title]\,\\ % 3 
-	
+\begin{td-exo}[Quelques preuves de NP-complétude pour \textsc{Steiner tree}]\,\\ % 3 
+	\input{../assets/tikz/td1_ex3_1.tex}
+	\input{../assets/tikz/td1_ex3_2.tex}
+	\input{../assets/tikz/td1_ex3_3.tex}
+
+	\begin{enumerate}
+		\item Montrer que 
+	\end{enumerate}
 \end{td-exo}
 
 % ----- Solutions exo 3 ----- %
