--- a/src/HAI802I_Algorithmique_Avancee/exos/exo_02.tex
+++ b/src/HAI802I_Algorithmique_Avancee/exos/exo_02.tex
@@ -2,7 +2,7 @@
 \begin{td-exo}[Autour de \textsc{Satisfaisabilité}]\, % 2 
 	\input{../assets/tikz/td1_ex2_1.tex}
 	
-	Montrer que textsc{Non Egal Satisfaisabilité} est \(\mathcal{NP}\)-\textit{complet}. 
+	Montrer que \textsc{Non Egal Satisfaisabilité} est \(\mathcal{NP}\)-\textit{complet}. 
 	La preuve se fera à partir de \textsc{Satisfaisabilité}.
 \end{td-exo}
 
