rename exo files for consistency

--- a/src/HAI802I_Algorithmique_Avancee/exos/exo_59.tex
+++ b/src/HAI802I_Algorithmique_Avancee/exos/exo_59.tex
@@ -1,6 +1,6 @@
 % ----- Consignes exo 59 ----- %
-\begin{td-exo}[title]\,\\ % 59 
-	
+\begin{td-exo}[Problème d'ordonnancement sans contrainte de précédence]\,\\ % 59 
+	On pose \(P || C_{\max}\) définie de la manière suivante:
 \end{td-exo}
 
 % ----- Solutions exo 59 ----- %
