small maj exo 59 -- AA

--- a/src/HAI802I_Algorithmique_Avancee/exos/exo_59.tex
+++ b/src/HAI802I_Algorithmique_Avancee/exos/exo_59.tex
@@ -1,7 +1,11 @@
 % ----- Consignes exo 59 ----- %
 \begin{td-exo}[Problème d'ordonnancement sans contrainte de précédence]\,\\ % 59 
 	On pose \(P || C_{\max}\) définie de la manière suivante:
+	\input{../assets/tikz/td1_ex59_1.tex}
+
+	Par la suite on va utiliser un ordonnancement par liste.
 \end{td-exo}
+% \(\alpha | \beta | \gamma\)
 
 % ----- Solutions exo 59 ----- %
 \iftoggle{showsolutions}{ 
