--- a/src/HAI802I_Algorithmique_Avancee/assets/tikz/td1_ex59_1.tex
+++ b/src/HAI802I_Algorithmique_Avancee/assets/tikz/td1_ex59_1.tex
@@ -1,6 +1,6 @@
 \vspace{-6mm}
 \begin{algorithm}[H]
-    \caption{\(P||C_{\max}\)}
+    \caption{\(P|\cdot|C_{\max}\)}
     \begin{algorithmic}
         \Require{\(n\) taches de durées \(p_1,\ldots,p_n\) indépendantes}
         \Ensure{Ordonnancer ces tâches sur \(m\) machines identiques en une durée totale minimale notée \(C_{\max}\).}
