mise a jour graphique ex2 -- RO2

--- a/src/HAI820I_Complements_RO/assets/module_header.tex
+++ b/src/HAI820I_Complements_RO/assets/module_header.tex
@@ -107,3 +107,7 @@
 }
 % convenience macro
 \newcommand{\bashFile}[1]{\lstinputlisting[style=bash-style]{#1}}
+
+\pgfplotsset{
+    every axis plot/.append style={thick}
+}
