--- a/src/HAI820I_Complements_RO/exos/exo_02.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_02.tex
@@ -40,7 +40,25 @@
 
 % ----- Solutions exo 2 ----- %
 \iftoggle{showsolutions}{
-	\begin{td-sol}[]\ % 2
-		
+	\begin{td-sol}[]\, % 2
+		\begin{enumerate}
+			\item La meilleure solution réelle ici est \(x^\ast_{\bb R} = (0.75, 0.25)\) avec \(z^\ast_{\bb R} = 2\).
+
+			La solution entière optimale est  \(x^\ast_{\bb Z} = (1, 0)\) avec \(z^\ast_{\bb Z} = 3\).
+
+			On peut visualiser ces résultats comme suit:
+
+			\input{../assets/tikz/td1_ex02_f1.tex}
+
+			\item La meilleure solution réelle ici est \(x^\ast_{\bb R} = (2.9, 0)\) avec \(z^\ast_{\bb R} = 870\).
+
+			La solution entière optimale est  \(x^\ast_{\bb Z} = (0, 4)\) avec \(z^\ast_{\bb Z} = 820\).
+
+			On peut visualiser ces résultats comme suit:
+
+			\input{../assets/tikz/td1_ex02_f2.tex}
+
+			\item Le dernier problème est non borné.
+		\end{enumerate}
 	\end{td-sol}
 }{}
