--- a/src/HAI820I_Complements_RO/exos/exo_05.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_05.tex
@@ -3,7 +3,7 @@
 	Nous considérons le graphe donné par la figure~\ref{fig:td1_ex4_f1} suivante:
 
     \vspace{0.2cm}
-    \input{../assets/tikz/td1_ex4_f1.tex}
+    \input{../assets/tikz/td1_ex05_f1.tex}
 
 	Donner deux stratégies en utilisant le principe du branch and bound pour résoudre le problème d'un plus court chemin.
 	Appliquer vos stratégies sur le graphe de la figure~\ref{fig:td1_ex4_f1}.
