maj consignes exos 7 a 11 -- RO2

--- a/src/HAI820I_Complements_RO/exos/exo_07.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_07.tex
@@ -1,6 +1,21 @@
 % ----- Consignes exo 7 ----- %
-\begin{td-exo}[title]\, % 7 
-	
+\begin{td-exo}[Le problème du voyageur du commerce symétrique]\, % 7 
+	\begin{enumerate}
+		\item Appliquer la méthode par séparation et évaluation décrite en cours pour résoudre le problème du voyageur de commerce dans le graphe \(K_6\) dont la matrice des poids est la suivante:
+
+		\begin{tabular}{c|cccccc} % chktex 44
+			\ & \(x\) & \(y\) & \(z\) & \(t\) & \(u\) & \(v\)\\
+			\hline % chktex 44
+			\(x\) & \(\infty\) & \(4\) & \(7\) & \(2\) & \(5\) & \(4\)\\
+			\(y\) & \(4\) & \(\infty\) & \(3\) & \(2\) & \(1\) & \(2\)\\
+			\(z\) & \(7\) & \(3\) & \(\infty\) & \(2\) & \(6\) & \(3\)\\
+			\(t\) & \(2\) & \(2\) & \(2\) & \(\infty\) & \(5\) & \(3\)\\
+			\(u\) & \(5\) & \(1\) & \(6\) & \(5\) & \(\infty\) & \(2\)\\
+			\(v\) & \(4\) & \(2\) & \(3\) & \(3\) & \(2\) & \(\infty\)\\
+		\end{tabular}
+
+		\item Que faudrait-il faire si on voulait connaitre tous les cycles de poids minimum?
+	\end{enumerate}
 \end{td-exo}
 
 % ----- Solutions exo 7 ----- %
