--- a/src/HAI820I_Complements_RO/exos/exo_08.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_08.tex
@@ -1,6 +1,12 @@
 % ----- Consignes exo 8 ----- %
-\begin{td-exo}[title]\, % 8 
+\begin{td-exo}[Simples inégalités valides]\,\\ % 8 
+	Considérons l'ensemble suivant:
 	
+	\begin{equation*}
+		X = \{x_i \in \{0,1\}:\ 3x_1 - 4x_2 + 2x_3 + x_5 \leq -2 \}
+	\end{equation*}
+
+	Donner deux équations valides.
 \end{td-exo}
 
 % ----- Solutions exo 8 ----- %
