--- a/src/HAI820I_Complements_RO/exos/exo_09.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_09.tex
@@ -1,6 +1,12 @@
 % ----- Consignes exo 9 ----- %
-\begin{td-exo}[title]\, % 9 
+\begin{td-exo}[Simple inégalité valide]\,\\ % 9 
+	Considérons l'ensemble suivant:
 	
+	\begin{equation*}
+		X = \{(x,y),\ 0 \leq x \leq 5, y\in \{0,1\}:\ x \leq 9999y \}
+	\end{equation*}
+	
+	Donner une inégalité valide.
 \end{td-exo}
 
 % ----- Solutions exo 9 ----- %
