--- a/src/HAI820I_Complements_RO/exos/exo_10.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_10.tex
@@ -1,6 +1,12 @@
 % ----- Consignes exo 10 ----- %
-\begin{td-exo}[title]\, % 10 
-	
+\begin{td-exo}[Simple inégalité valide]\,\\ % 10 
+	Considérons l'ensemble suivant:
+
+	\begin{equation*}
+		X = \{(x,y),\ 0 \leq x \leq 14,y\in\{0,1\}: \ x\leq 10y\}
+	\end{equation*}
+
+	Donner une inégalité valide.
 \end{td-exo}
 
 % ----- Solutions exo 10 ----- %
