--- a/src/HAI820I_Complements_RO/exos/exo_11.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_11.tex
@@ -1,6 +1,11 @@
 % ----- Consignes exo 11 ----- %
-\begin{td-exo}[title]\, % 11 
-	
+\begin{td-exo}[Simple inégalité valide]\, % 11 
+	Considérons la région entière \(X = P\cap \bb N^4\) avec
+
+	\begin{equation*}
+		P = \{x\in \bb R^4_+:\ 13x_1 + 20x_2 + 11x_3 + 6x_4 \geq 72\}
+	\end{equation*}
+	Donner une inégalité valide.
 \end{td-exo}
 
 % ----- Solutions exo 11 ----- %
