maj ex4 td1 -- RO2

--- a/src/HAI820I_Complements_RO/assets/module_header.tex
+++ b/src/HAI820I_Complements_RO/assets/module_header.tex
@@ -40,7 +40,7 @@
 
 \counterwithout{tdcounter}{section} 
 
-\usetikzlibrary{shapes,arrows,positioning,calc,fit,backgrounds,angles,quotes}
+\usetikzlibrary{shapes,arrows.meta,positioning,calc,fit,backgrounds,angles,quotes,trees}
 
 \newcommand{\becomes}{\begin{center}\(\downarrow\)\end{center}}
 
