--- a/src/HAI820I_Complements_RO/exos/exo_04.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_04.tex
@@ -20,6 +20,20 @@
 % ----- Solutions exo 4 ----- %
 \iftoggle{showsolutions}{ 
 	\begin{td-sol}[]\ % 4
+		\begin{enumerate}
+			\item L'arbre de branchement sur \(x_2\) est le suivant:
+
+			\input{../assets/tikz/td1_ex04_f1.tex}
+
+			\item L'arbre de branchement sur \(x_1\) est le suivant:
+
+			\input{../assets/tikz/td1_ex04_f2.tex}
+
+			% \item et un test
+
+			% \input{../assets/tikz/td1_ex04_ftest.tex}
+		\end{enumerate}
+
 		
 	\end{td-sol}
 }{}
