--- a/src/HAI807I_Calcul_Formel/exos/exo4.ipynb
+++ b/src/HAI807I_Calcul_Formel/exos/exo4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 59,
    "id": "8b8205ec",
    "metadata": {
     "vscode": {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 60,
    "id": "53a865c2",
    "metadata": {
     "vscode": {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 61,
    "id": "3784180c",
    "metadata": {
     "vscode": {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 62,
    "id": "e6d61a78",
    "metadata": {
     "vscode": {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 63,
    "id": "4e1fee05",
    "metadata": {
     "vscode": {
@@ -155,17 +155,12 @@
     }
    ],
    "source": [
-    "from sage.functions.log import logb\n",
     "# check when karatsuba becomes interesting\n",
-    "n1(n) = 9*n^(logb(3, 2)) - 8*n\n",
+    "n1(n) = 9*n^(log(3)/(log(2))) - 8*n\n",
     "n2(n) = n^2 + (n-1)^2\n",
     "\n",
-    "solve([n1<n2], n)\n",
-    "\n",
-    "tmp(n) = 2*n^2 + 6*n - 9*n^(log(3)/log(2)) + 1\n",
-    "\n",
     "i = 2\n",
-    "while tmp(i) < 0:\n",
+    "while n2(i) - n1(i) < 0:\n",
     "    i+=1\n",
     "print(i)"
    ]
