big changes to enable double compilation, both light and dark mode outputs, to complete

--- a/src/common/macros/theorems.tex
+++ b/src/common/macros/theorems.tex
@@ -41,6 +41,9 @@
       linewidth=4pt,
       innerrightmargin=0pt,
       linecolor=#3,
+      backgroundcolor=theorembg,
+      fontcolor=theoremtext,
+      % linecolor=theoremframe,
     ]{#1}[#4]{#2}%
   }{% Dependent counter 
     \newmdtheoremenv[
@@ -52,6 +55,9 @@
       linewidth=4pt,
       innerrightmargin=0pt,
       linecolor=#3,
+      backgroundcolor=theorembg,
+      fontcolor=theoremtext,
+      % linecolor=theoremframe,
     ]{#1}{#2}[#4]%
   }%
 }
