--- a/src/HAI820I_Complements_RO/assets/tikz/td1_ex04_ftest.tex
+++ b/src/HAI820I_Complements_RO/assets/tikz/td1_ex04_ftest.tex
@@ -11,7 +11,8 @@
                 fill=blue!20, 
                 inner sep=4pt, 
                 font=\scriptsize, 
-                align=center
+                align=center,
+                text=black
             },
             solution/.style={draw=red, very thick, fill=red!8},
             optimal/.style={draw=green, very thick, fill=green!8},
