--- a/src/HAI820I_Complements_RO/assets/tikz/td1_ex05_f1.tex
+++ b/src/HAI820I_Complements_RO/assets/tikz/td1_ex05_f1.tex
@@ -2,7 +2,7 @@
 \caption{\centering Recherche d'un plus court chemin par branch and bound}\label{fig:td1_ex4_f1}
 }{
     \fbox{
-        \begin{tikzpicture}[scale=1, main node/.style={circle, draw, fill=blue!20, inner sep=1pt, font=\scriptsize, minimum size=6mm}]
+        \begin{tikzpicture}[scale=1, main node/.style={circle, draw, fill=blue!20, inner sep=1pt, font=\scriptsize, minimum size=6mm, text=black}]
             % les sommets initiaux
             \node[main node] (s) at (-3.5,0) {\(s\)};
             \node[main node] (t) at (3.5,0) {\(t\)};
