finish consignes exos 5 - 7 -- CF

--- a/src/HAI807I_Calcul_Formel/exos/exo_05.tex
+++ b/src/HAI807I_Calcul_Formel/exos/exo_05.tex
@@ -1,6 +1,15 @@
 % ----- Consignes exo 5 ----- %
-\begin{td-exo}[title]\, % 5 
-	
+\begin{td-exo}[]\,\\ % 5 
+	Nous revenons ici sur l'analyse de la complexité de l'algorithme de Karatsuba pour des polynomes de \(A[X]\) avec \(A\) un anneau quelconque.
+	\begin{enumerate}
+		\item Donner le nombre exact de multiplications dans \(A\) qu'effectue au total l'algorithme de Karatsuba pour multiplier deux polynomes de taille \(n\) à coefficients dans \(A\).
+
+		\item Calculer le nombre d'additions dans \(A\) effectuées au premier niveau récursif par l'algorithme de Karatsuba.
+
+		\item Utiliser l'analyse de complexité de Karatsuba pour déduire une borne sur la complexité exacte en nombre d'opérations dans \(A\) (on ne souhaite plus avoir de constante \(c\) dans l'analyse).
+
+		\item Déduire, par l'utilisation de sage, une taille de polynome à partir de laquelle il serait intéressant d'utiliser l'algorithme de Karatsuba plutôt que l'algorithme naïf de multiplication de polynomes.
+	\end{enumerate}
 \end{td-exo}
 
 % ----- Solutions exo 5 ----- %
