--- a/src/HAI807I_Calcul_Formel/exos/exo_06.tex
+++ b/src/HAI807I_Calcul_Formel/exos/exo_06.tex
@@ -1,6 +1,11 @@
 % ----- Consignes exo 6 ----- %
-\begin{td-exo}[title]\, % 6 
-	
+\begin{td-exo}[]\,\\ % 6 
+	Calculer les produits des polynomes dans \(\bb Z[X]\) suivants en utilisant l'algorithme de Karatsuba:
+	\begin{enumerate}
+		\item \(P = 3X + 4\) et \(Q = 2X + 3\).
+		\item \(P = X + 3\) et \(Q = 3X + 2\).
+		\item \(P = X^3 + 2X^2 + 1\) et \(Q = 2X^3 + X + 2\).
+	\end{enumerate}
 \end{td-exo}
 
 % ----- Solutions exo 6 ----- %
