--- a/src/HAI807I_Calcul_Formel/exos/exo_07.tex
+++ b/src/HAI807I_Calcul_Formel/exos/exo_07.tex
@@ -1,6 +1,9 @@
 % ----- Consignes exo 7 ----- %
-\begin{td-exo}[title]\, % 7 
-	
+\begin{td-exo}[]\,\\ % 7 
+	Dans un premier temps, vous allez coder l'algorithme de multiplication de polynomes de Karatsuba en faisant l'hypothèse que les polynomes d'entrée sont de taille \(2^k\) pour un entier \(k \geq 0\) quelconque.
+	Votre fonction prendra en paramètre la liste des coefficients des deux polynomes à multiplier.
+	Ces listes devront obligatoirement faire la meme taille.
+	Dans un deuxieme temps, vous proposerez une amélioration du code qui permettra de prendre en parametre des polynomes de taille quelconque.
 \end{td-exo}
 
 % ----- Solutions exo 7 ----- %
