maj consignes exos 12 a 16 -- RO2

--- a/src/HAI820I_Complements_RO/exos/exo_12.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_12.tex
@@ -1,6 +1,26 @@
 % ----- Consignes exo 12 ----- %
-\begin{td-exo}[title]\, % 12 
-	
+\begin{td-exo}[Inégalités valides]\,\\ % 12 
+	Considérons une instance de \textsc{Bin Packing Problem}:
+
+    \vspace{0.2cm}
+    \input{../assets/tikz/td1_ex12_f1.tex}
+
+	On considère l'instance suivante:
+	\begin{itemize}
+		\item La capacité des boites est \(W = 6\).
+		\item Les objets à ranger sont \(a_1 = 2\), \(a_2 = 3\), \(a_3 = 3\), \(a_4 = 3\), \(a_5 = 4\), \(a_6 = 4\), \(a_7 = 5\).
+	\end{itemize}
+
+
+	\begin{enumerate}
+		\item Donner un algorithme linéaire en nombres entiers qui modélise le \textsc{Bin Packing Problem}.
+
+		\item Donner une solution optimale relaxée pour l'instance donnée. Montrer que cette solution est optimale.
+
+		\item Proposer une borne inférieure pour toute solution optimale.
+
+		\item Donner un ensemble de coupes pour l'instance.
+	\end{enumerate}
 \end{td-exo}
 
 % ----- Solutions exo 12 ----- %
