--- a/src/HAI820I_Complements_RO/exos/exo_13.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_13.tex
@@ -1,6 +1,15 @@
 % ----- Consignes exo 13 ----- %
-\begin{td-exo}[title]\, % 13 
-	
+\begin{td-exo}[Le polytope pour le \(0-1\) \textsc{Sac a Dos}]\,\\ % 13 
+	Soit 
+	\begin{equation*}
+		S = \left\{ x \in \bb R^5\ \mid\ 79x_1 + 53x_2 + 53x_3 + 45x_4 + 45x_5 \leq 178\right\}.
+	\end{equation*}
+	avec \(x_i \in \{0,1\}\) pour \(i = 1, \ldots, 5\).
+
+	\begin{enumerate}
+		\item Donner les ensembles minimaux dépendants et donner les inégalités valides.
+		\item Donner l'extension \(E(C)\) d'un ensemble minimal dépendant et les coupes associées.
+	\end{enumerate}
 \end{td-exo}
 
 % ----- Solutions exo 13 ----- %
