--- a/src/HAI820I_Complements_RO/exos/exo_15.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_15.tex
@@ -1,6 +1,20 @@
 % ----- Consignes exo 15 ----- %
-\begin{td-exo}[title]\, % 15 
-	
+\begin{td-exo}[Sur les coupes de Gomory]\label{exos:exo_15}\,\\ % 15 
+	On considère le programme linéaire suivant:
+	\begin{equation*}
+		PL = 
+		\begin{cases}
+			2x_1 + 5x_2 \leq 17 \\
+			3x_1 + 2x_2 \leq 10 \\
+			x_1, x_2 \in \bb N\\
+			\max{(z)} = 2x_1 + x_2
+		\end{cases}
+	\end{equation*}
+
+	\begin{enumerate}
+		\item Résoudre le programme linéaire en nombres entiers par la méthode des coupes de Gomory.
+		\item Résoudre le programme linéaire en nombres entiers par la méthode du Branch and Bound.
+	\end{enumerate}
 \end{td-exo}
 
 % ----- Solutions exo 15 ----- %
