--- a/src/HAI820I_Complements_RO/exos/exo_16.tex
+++ b/src/HAI820I_Complements_RO/exos/exo_16.tex
@@ -1,6 +1,15 @@
 % ----- Consignes exo 16 ----- %
-\begin{td-exo}[title]\, % 16 
-	
+\begin{td-exo}[Algorithme de coupe de Gomory]\label{exos:exo_16}\,\\ % 16
+	Donner la solution du programme linéaire suivant:
+	\begin{equation*}
+		PL = 
+		\begin{cases}
+			2x_1 + x_2 \leq 6 \\
+			2x_1 + 3x_2 \leq 9 \\
+			x_1, x_2 \in \bb N\\
+			\max{(z)} = 3x_1 + 4x_2
+		\end{cases}
+	\end{equation*}
 \end{td-exo}
 
 % ----- Solutions exo 16 ----- %
